--- a/style.css
+++ b/style.css
@@ -69,11 +69,20 @@ input {
     color: #e5e5e5;
 }
 
+.download {
+    border: 2px solid #d36d22;
+    background-color: grey;
+    text-align: center;
+    padding: 10px 30px 10px 30px;
+    text-decoration: none;
+    color: #e5e5e5;
+    text-shadow: 0 0 0 #000;
+}
+
 .big-input {
     width: 500px;
     height: 100px;
     border: 2px solid #d36d22;
-    background-color: black;
     padding: 10px 30px 10px 5px;
     color: #e5e5e5;
 }
